# neuro-cocodelics

./: .gitignore  README.md  local_dry_run.sh  pyproject.toml  requirements.txt
cocodelics/: info_for_plot_topomap_function.fif  utils.py
cocodelics/viz/: utils.py
data/: download.py  split_csv.py
machine-learning/: run_ml.py  visualize_results.py
machine-learning/cluster_scripts/: ketamine.sbatch  lsd-avg.sbatch  lsd-closed1.sbatch  lsd-closed2.sbatch  lsd-music.sbatch  lsd-open1.sbatch  lsd-open2.sbatch  lsd-video.sbatch  lsd_cpu.sbatch  lsd_eye_closed.py  one_feat_ketamine.sbatch  one_feat_lsd-avg.sbatch  one_feat_lsd-closed1.sbatch  one_feat_lsd-closed2.sbatch  one_feat_lsd-music.sbatch  one_feat_lsd-open1.sbatch  one_feat_lsd-open2.sbatch  one_feat_lsd-video.sbatch  one_feat_perampanel.sbatch  one_feat_psil.sbatch  one_feat_tiagabine.sbatch  perampanel.sbatch  psil.sbatch  tiagabine.sbatch
machine-learning/configs/: config_ketamine_single_feature_all_sensors.yml  config_ketamine_single_sensor_all_features.yml  config_lsd-avg_single_feature_all_sensors.yml  config_lsd-avg_single_sensor_all_features.yml  config_lsd-closed1_single_feature_all_sensors.yml  config_lsd-closed1_single_sensor_all_features.yml  config_lsd-closed2_single_feature_all_sensors.yml  config_lsd-closed2_single_sensor_all_features.yml  (+16 more)
notebooks/: feature-umap.ipynb  load_pickles_analyze.ipynb  topomaps.ipynb
toto_embedding/: embeddings.py  preprocess.py  requirements.txt  utils.py
viz/: aggregate_ml_results.py  feature_importance.py  plot_functions.py  utils.py  visualize_results.py
